<resources>
    <string name="facebook_app_id" translatable="false">1864781376934348</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1864781376934348</string>
    <string name="alert_ok">Ok</string>
    <string name="alert_warning">Alert</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="email_exists">This e-mail address is already registered.</string>
    <string name="invalid_user">Invalid e-mail address or password.</string>
    <string name="unkown_error">An unexpected error has occurred. Please try again later.</string>
    <string name="email_not_confirmed">Your e-mail address has not been confirmed.</string>
    <string name="fill_all_fields_to_sing_in">Please, fill all required fields to sign in.</string>
    <string name="really_want_to_leave">Really want to leave?</string>
    <string name="delete_ticket_success">Delete Success</string>
    <string name="invalid_checked">Please agree to the terms and conditions.</string>
    <string name="emptyFeed">There are no posts.</string>
    <string name="invalid_password">The password must contain at least 8 characters and a capital letter</string>
    <string name="different_passwords">Differents Passwords</string>
    <string name="fill_all_fields_password">Fill in all the fields</string>
    <string name="invalid_password_error">Invalid Password</string>
    <string name="send">Send</string>
    <string name="btn_sign_in2">Sign in</string>
    <string name="btn_sign_up">Sign up</string>
    <string name="email">E-mail*</string>
    <string name="name">Name*</string>
    <string name="phone">Phone number*</string>
    <string name="password">Password*</string>
    <string name="confirm_password">Confirm password*</string>
    <string-array name="sex_selection">
        <item>Female</item>
        <item>Male</item>
        <item>Other</item>
    </string-array>
    <string name="rg">RG*</string>
    <string name="half_entrance_id">Half entrance document identification*</string>
    <string name="first_name">First Name*</string>
    <string name="last_name">Last Name*</string>
    <string name="cpf">CPF*</string>
    <string name="birthday">Birthday*</string>
    <string name="card_numer">Card Number*</string>
    <string name="expiration_month">Expiration Month: Eg. 01</string>
    <string name="expiration_year">Expiration Year: Eg. 25</string>
    <string name="cvv">CVV*</string>
    <string name="parcels_number">Installments Number*</string>
    <string name="postal_code">Postal Code*</string>
    <string name="street">Street*</string>
    <string name="street_number">Number*</string>
    <string name="location_complement">Complement</string>
    <string name="neighborhood">Neighborhood*</string>
    <string name="city">City*</string>
    <string name="state">State*</string>
    <string name="save_button">Save</string>
    <string name="see_more">see more &gt;</string>
    <string name="posts">Posts</string>
    <string name="next_events">Next events</string>
    <string name="photo_gallery">Photo Gallery</string>
    <string name="photo_detail">Photo Detail</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="unfollow">UNFOLLOW</string>
    <string name="followersConnections">Followers</string>
    <string name="followingConnections">Following</string>
    <string name="search">Search</string>
    <string name="search_users">Find users</string>
    <string name="search_friends">Find friends</string>
    <string name="invite_button">Invite</string>
    <string name="invited_button">INVITATION SENT</string>
    <string name="comment_hint">Insert your comment here…</string>
    <string name="post_hint">Write your text here…</string>
    <string name="new_post">New Post</string>
    <string name="comments">Comments</string>
    <string name="week_suggestion">Next events</string>
    <string name="near_events_home">Close to me</string>
    <string name="you_have_no_events_suggestions">You have no recommended events.</string>
    <string name="you_have_no_events">You have no events.</string>
    <string name="you_have_no_friends">You don\u0027 t have any friends on Go In.</string>
    <string name="you_have_no_followers">You don\u0027 t have any followers.</string>
    <string name="you_dont_follow_anyone">You do not follow anyone.</string>
    <string name="value_up_to">Up to</string>
    <string name="cancel">Cancel</string>
    <string name="unfollow_alert">Stop following %1$s?</string>
    <string name="share_alert">Share %1$s\'s post?</string>
    <string name="tickets">tickets</string>
    <string name="categories">Categories</string>
    <string name="categorie_label">Categorie:</string>
    <string name="subcategories">Subcategories</string>
    <string name="no_subcategories_message">Could not find subcategories for this category.</string>
    <string name="edit">Edit profile</string>
    <string name="interest">Interests</string>
    <string name="find_friends_facebook">Find friends from Facebook</string>
    <string name="Following">Following</string>
    <string name="Followers">Followers</string>
    <string name="post_likes">Likes</string>
    <string name="x">x</string>
    <string name="filter_search">Filter</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="new_password_confirmation">Confirm new Password</string>
    <string name="change">Change</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="feed">Feed</string>
    <string name="profile">Profile</string>
    <string name="my_profile">My Profile</string>
    <string name="free">Free</string>
    <string-array name="tabsmain_toolbar_titles">
        <item>Feed</item>
        <item>Events</item>
        <item>Connections</item>
        <item>Conversations</item>
        <item>Profile</item>
    </string-array>
    <string name="notification_comment">%s commented on your post.</string>
    <string name="notification_invite">%1$s invited you to the event %2$s.</string>
    <string name="notification_like">%s liked your post.</string>
    <string name="notification_event">You have an event this week: %s.</string>
    <string name="notification_checkin">%1$s checked in to %2$s.</string>
    <string name="notification_follow">%s followed you.</string>
    <string name="notification_comment_tag">%s tagged you in a post’s comments.</string>
    <string name="notification_post_tag">%s tagged you in a post.</string>
    <string name="notification_added_to_group">%1$s added you to %2$s.</string>
    <string name="notification_ticket_received">%1$s gave you a ticket to %2$s.</string>
    <string name="notification_ticket_confirmed">%1$s: The ticket`s payment was confirmed.</string>
    <string name="notification_vip_box_invite">%1$s invited you to share a vip box for the event %2$s.</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="entry_policy">Half Price Policy</string>
    <string name="logout">Logout</string>
    <string name="without_information_message">Not informed</string>
    <string name="delete">Delete</string>
    <string name="report">Report</string>
    <string name="please_insert_name">Please enter your name.</string>
    <string name="alteration_saved">Your changes have been saved.</string>
    <string name="please_insert_password">Please enter your password.</string>
    <string name="please_confirm_password">Please confirm your password.</string>
    <string name="password_dont_match">The passwords are different.</string>
    <string name="password_incomplete">Password must be at least 6 characters long.</string>
    <string name="rate">Rate</string>
    <string name="ranking">Ranking</string>
    <string name="without_ratings_message">Be the first to review this establishment!</string>
    <string name="rate_club_message">Review this place: </string>
    <string name="rate_comment_field_message">Write your comment: </string>
    <string name="new_rating_success_message">Your rating for this place was sent successfully!</string>
    <string name="delete_rating_success_message">Your rating for this place was deleted successfully!</string>
    <plurals name="ratings_count">
        <item quantity="one">%d rating</item>
        <item quantity="other">%d ratings</item>
    </plurals>
    <plurals name="attendance">
        <item quantity="one"> person is interested</item>
        <item quantity="other"> people are interested</item>
    </plurals>
    <string name="distance_from_you"> %s from you</string>
    <string name="uber_estimate_time_arrival"> %d minutes</string>
    <string name="confirmation_checkin">Would you like to check in to this event?</string>
    <string name="to">to</string>
    <string name="at">at</string>
    <string name="check_in_disabled_message">It’s only possible to check-in during the event.</string>
    <string name="failure_get_categories_message">It was not possible to load the categories. Please, try again later.</string>
    <string name="is_feeling">is feeling</string>
    <string name="my_feeling">I am feeling…</string>
    <string name="feeling">Feelings</string>
    <string name="in">in</string>
    <string name="did_checkin">checked in to</string>
    <string name="shared_a_post">shared a post.</string>
    <string name="share">share</string>
    <string name="share_success">Post successfully shared.</string>
    <string name="error_share">It was not possible to share this post. Please, try again.</string>
    <string name="contacts">Contacts</string>
    <string name="message_input_hint">Write your message here…</string>
    <string name="error_uploading_image">It was not possible to upload the image. It is not stored locally in your device.</string>
    <string name="next">Next</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="empty_members_list">It is not possible to create a group without members.</string>
    <string name="my_tickets">My Tickets</string>
    <string name="buy">Buy</string>
    <string name="sold_out">Sold out</string>
    <string name="pending_payment">Pending Payment</string>
    <string name="friends_pending_payment">Waiting for friends\' payments</string>
    <string name="no_tickets_message">No tickets available at the moment.</string>
    <plurals name="tickets_bought">
        <item quantity="one">%d ticket bought</item>
        <item quantity="other">%d tickets bought</item>
    </plurals>
    <plurals name="tickets_vip_box_bought">
        <item quantity="one">For %d person</item>
        <item quantity="other">For %d people</item>
    </plurals>
    <plurals name="tickets_pending">
        <item quantity="one">%d pending ticket</item>
        <item quantity="other">%d pending tickets</item>
    </plurals>
    <string name="purchase_date">Purchase date: %s</string>
    <string name="button_paypal_text">Pay with paypal</string>
    <string name="button_card_text">Pay with card</string>
    <string name="button_boleto_text">Pay with boleto</string>
    <string name="ticket_purchase">Ticket Purchase</string>
    <string name="tickets_data">Tickets Data</string>
    <string name="add_friends_button_text">Add friends +</string>
    <string name="ticket_owner_info_incomplete">There are some blank fields yet.</string>
    <string name="ticket_owner_info_invalid">There are some invalid fields yet.</string>
    <string name="buy_for_myself">Buy for myself</string>
    <string name="info_payment">Information Payment</string>
    <string name="purchase_confirmation">Purchase Confirmation</string>
    <string name="do_checkin">Do\nCheckin</string>
    <string name="buy_ticket">Buy\nTicket</string>
    <string name="invite_friends_event">Invite\nFriends</string>
</resources>