<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="activity"
            type="br.com.legacy.viewControllers.activitites.PaymentMethodActivity" />
    </data>

    <LinearLayout
        android:id="@+id/payment_method_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grayBackgroundBoard"
        android:orientation="vertical">

        <include
            android:id="@+id/payment_method_toolbar"
            layout="@layout/item_custom_toolbar_orange"
            app:model="@{activity.toolbar}"
            app:parent="@{activity}" />

        <LinearLayout
            android:id="@+id/payment_method_buttons_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="57.5dp"
            android:layout_marginStart="57.5dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/paypal_button"
                style="@style/text_white_13sp_bold"
                android:layout_width="match_parent"
                android:layout_height="37.5dp"
                android:background="@drawable/button_paypal"
                android:onClick="@{() -> activity.onClickPayPalButton()}"
                android:text="@string/button_paypal_text"
                android:visibility="gone" />

            <Button
                android:id="@+id/card_button"
                style="@style/text_white_13sp_bold"
                android:layout_width="match_parent"
                android:layout_height="37.5dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_primary_dark"
                android:onClick="@{() -> activity.onClickCardButton()}"
                android:text="@string/button_card_text" />

            <Button
                android:id="@+id/ticket_button"
                style="@style/text_white_13sp_bold"
                android:layout_width="match_parent"
                android:layout_height="37.5dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_primary_dark"
                android:onClick="@{() -> activity.onClickBoletoButton()}"
                android:text="@string/button_boleto_text"
                android:visibility="@{activity.isIngresse() ? View. GONE : View.VISIBLE}" />

        </LinearLayout>


    </LinearLayout>

</layout>