<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/detail_event_invite_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buy_ticket">

        <ImageView
            android:layout_width="@dimen/_58sdp"
            android:layout_height="@dimen/_66sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_16sdp"
            android:src="@drawable/event_icon_social" />

        <TextView
            android:id="@+id/txt_invite_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_medium"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/battleship_gray"
            android:text="@string/invite_friends_event"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buy_ticket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/detail_event_invite_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/detail_event_checkin_button">

        <ImageView
            android:layout_width="@dimen/_58sdp"
            android:layout_height="@dimen/_66sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_16sdp"
            android:src="@drawable/event_icon_wallet" />

        <TextView
            android:id="@+id/txt_buy_ticket_detail"
            android:textColor="@color/battleship_gray"
            android:layout_width="@dimen/_66sdp"
            android:fontFamily="@font/quicksand_medium"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/buy_ticket"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/detail_event_checkin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/buy_ticket"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="@dimen/_58sdp"
            android:layout_height="@dimen/_66sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_16sdp"
            android:src="@drawable/event_icon_checkin" />

        <TextView
            android:id="@+id/txt_checkin_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/battleship_gray"
            android:gravity="center"
            android:text="@string/do_checkin"
            android:fontFamily="@font/quicksand_medium"
            android:textSize="14sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>